# dialoghelper

./: .gitignore  04_exhash.html  04_exhash.md  CHANGELOG.md  MANIFEST.in  README.md  capture.html  capture.html.md  core.html  core.html.md  experimental.html  experimental.html.md  index.html  index.html.md  inspecttools.html  inspecttools.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  solve_auth.html  solve_auth.html.md  tmux.html  tmux.html.md  tracetools.html  tracetools.html.md  utils.html  utils.html.md
dialoghelper/: __init__.py  _modidx.py  capture.py  core.py  dialoghelper  exhash.py  experimental.py  inspecttools.py  js.js  polya.py  screenshot.js  solve_auth.py  solveitskill.py  stdtools.py  termskill.py  tmux.py  tracetools.py  utils.py  websearchskill.py  widgets.py
nbs/: 00_core.ipynb  01_capture.ipynb  01_experimental.ipynb  01_polya.ipynb  02_inspecttools.ipynb  02_tracetools.ipynb  03_tmux.ipynb  04_exhash.ipynb  05_solve_auth.ipynb  06_utils.ipynb  06_widgets.ipynb  index.ipynb  nbdev.yml
