[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="dialoghelper"
dynamic = ["version"]
description = "Helper functions for solveit dialogs"
readme = "README.md"
requires-python=">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/dialoghelper"
Documentation = "https://AnswerDotAI.github.io/dialoghelper"

[project.entry-points.nbdev]
dialoghelper = "dialoghelper._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "dialoghelper.__version__"}

[tool.setuptools.packages.find]
include = ["dialoghelper"]

[tool.nbdev]
custom_sidebar = false
